Fixes the overlay that would cause the app container to overflow (scroll)

--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,7 @@ p {
     @apply bg-background text-foreground;
   }
 }
+
+.react-joyride__overlay {
+  position: fixed !important;
+}
